--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,10 @@ header {
   width: 100%;
 }
 
+.big-margin-top {
+  margin-top: 10rem;
+}
+
 .margin-top {
   margin-top: 7rem;
 }
@@ -67,9 +71,16 @@ header {
   border-radius: 5px;
 }
 
+.big-padding {
+  padding: 1rem 2rem;
+}
+
+.small-padding {
+  padding: 0.5rem 1rem;
+}
+
 .get-started {
   font-family: 'Nunito', sans-serif;
-  padding: 1rem 2rem;
   font-size: 24pt;
 }
 
@@ -80,12 +91,19 @@ footer {
   bottom: 0;
 }
 
+.above-footer {
+  position: fixed;
+  left: 0;
+  bottom: 75px;
+}
+
 .footer-half {
   width: 50%;
 }
 
 .dog {
   width: 100%;
+  max-height: 600px;
 }
 
 .justify-end {
@@ -94,4 +112,20 @@ footer {
 
 main {
   padding: 1rem 1rem;
+}
+
+.caption-font {
+  font-size: 16pt;
+}
+
+.padding-around {
+  padding: 1rem;
+}
+
+.all-column-half {
+  width: 50%;
+}
+
+.random {
+  font-size: 24pt;
 }
