--- a/css/styles.css
+++ b/css/styles.css
@@ -121,3 +121,21 @@ main {
 .text-align-right {
   text-align: right;
 }
+
+.modal {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.671);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 30% 10% auto;
+  padding: 20px;
+  width: 80%;
+  height: 70%;
+}
