--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ header {
   color: white;
   background-color: #f38ba0;
   border: none;
-  border-radius: 5px;
+  border-radius: 10px;
 }
 
 .big-padding {
@@ -64,12 +64,16 @@ header {
 }
 
 .small-padding {
-  padding: 0.5rem 1rem;
+  padding: 0.3rem 1rem;
 }
 
 .get-started {
   font-family: 'Nunito', sans-serif;
   font-size: 24pt;
+}
+
+.sixteen-font {
+  font-size: 16pt;
 }
 
 footer {
