--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,14 @@ header {
   margin: 0;
 }
 
+.margin-top-none {
+  margin-top: 0;
+}
+
+.margin-bottom-none {
+  margin-bottom: 0;
+}
+
 .margin-bottom {
   margin-bottom: 2rem;
 }
@@ -137,9 +145,20 @@ main {
 }
 
 .modal-content {
+  position: relative;
   background-color: #fefefe;
-  margin: 30% 10% auto;
+  margin: 25% 10% auto;
   padding: 20px;
   width: 80%;
-  height: 70%;
+  height: 80%;
+  border-radius: 10px;
+}
+
+.bottom-right {
+  position: absolute;
+  bottom: 20px;
+}
+
+.underline {
+  text-decoration: underline;
 }
