--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,10 @@ header {
   font-size: 16pt;
 }
 
+.twenty-font {
+  font-size: 20pt;
+}
+
 footer {
   background-color: white;
   position: fixed;
@@ -142,16 +146,6 @@ main {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.671);
-}
-
-.modal-content {
-  position: relative;
-  background-color: #fefefe;
-  margin: 25% 10% auto;
-  padding: 20px;
-  width: 80%;
-  height: 80%;
-  border-radius: 10px;
 }
 
 .bottom-right {
