--- a/css/styles.css
+++ b/css/styles.css
@@ -79,8 +79,8 @@ header {
   padding: 0.5rem 0.5rem 0.2rem 0.5rem;
 }
 
-.no-padding {
-  padding: 0;
+.bottom-padding {
+  padding: 0 0 3rem 0;
 }
 
 .get-started {
