--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,10 @@ header {
   margin: 0;
 }
 
+.margin-top {
+  margin-top: 1rem;
+}
+
 .margin-top-none {
   margin-top: 0;
 }
@@ -179,4 +183,8 @@ main {
 
 .star-icon-filled {
   width: 20px;
+}
+
+.text-align-left {
+  text-align: left;
 }
