--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,7 @@ header {
   background-color: #f38ba0;
   border: none;
   border-radius: 10px;
+  transition: background-color 500ms;
 }
 
 .big-padding {
@@ -89,6 +90,7 @@ header {
 
 .get-started {
   font-size: 2rem;
+  transition: background-color 500ms;
 }
 
 .sixteen-font {
@@ -190,4 +192,9 @@ button,
 .underline,
 .pencil-square {
   cursor: pointer;
+}
+
+.get-started:hover,
+.button:hover {
+  background-color: #ffbcbc;
 }
