--- a/css/layout.css
+++ b/css/layout.css
@@ -47,6 +47,10 @@
   text-align: right;
 }
 
+.width-350-mobile {
+  width: 350px;
+}
+
 @media screen and (min-width: 768px) {
   .container {
     max-width: 900px;
