--- a/css/styles.css
+++ b/css/styles.css
@@ -198,3 +198,26 @@ button,
 .button:hover {
   background-color: #ffbcbc;
 }
+
+.spinner {
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  margin: auto;
+  width: 64px;
+  height: 64px;
+  border: 8px solid;
+  border-color: #f38ba0 transparent #f38ba0 transparent;
+  border-radius: 50%;
+  animation: spin 1.2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
