--- a/css/layout.css
+++ b/css/layout.css
@@ -34,7 +34,7 @@
   background-color: #fefefe;
   margin: 25% auto;
   padding: 20px;
-  width: 90%;
+  width: 80%;
   border-radius: 10px;
 }
 
@@ -58,6 +58,11 @@
     max-width: 900px;
   }
 
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
   .column-full,
   .column-half {
     padding: 0;
@@ -72,7 +77,7 @@
   }
 
   .mobile-hidden {
-    display: block;
+    display: flex;
   }
 
   .desktop-center {
@@ -89,7 +94,7 @@
     background-color: #fefefe;
     margin: auto;
     padding: 20px;
-    width: 60%;
+    width: 500px;
     border-radius: 10px;
   }
 
