removed icons in header nav and aligned text, shows grid of favorites instead of just a vertical list on tablet/desktop

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,7 @@ span {
   font-family: 'Pacifico', cursive;
   font-size: 3rem;
   font-weight: 400;
+  padding: 0.25rem;
 }
 
 .header {
@@ -173,6 +174,7 @@ main {
 
 li {
   margin-bottom: 1rem;
+  flex-wrap: nowrap;
 }
 
 .home-button-header,
@@ -212,4 +214,21 @@ button,
 
 .flex {
   display: flex;
+}
+
+.align-center {
+  align-content: center;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.padding-left {
+  padding-left: 1rem;
+}
+
+.home-button-header,
+.saved-button-header {
+  font-weight: 600;
 }
