--- a/css/layout.css
+++ b/css/layout.css
@@ -15,10 +15,6 @@
   justify-content: center;
 }
 
-.width {
-  width: 100%;
-}
-
 .width-90 {
   width: 90%;
 }
@@ -72,10 +68,9 @@
 }
 
 .above-footer {
-  position: fixed;
-  bottom: 75px;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  position: relative;
+  bottom: 0;
+  margin-top: 1rem;
 }
 
 .text-align-right-mobile {
@@ -134,11 +129,6 @@
     padding: 20px;
     width: 500px;
     border-radius: 10px;
-  }
-
-  .above-footer {
-    position: relative;
-    bottom: 0;
   }
 
   .text-align-right-mobile {
